--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
@@ -121,7 +121,7 @@
                       <!-- TODO:
                       <case-xxx-control *ngIf="showField(caseFieldsNames.Mail2Ticket)" [field]="caseFieldsNames.Mail2Ticket" [form]="form"></case-xxx-control>
                       -->
-                      <case-textarea-control *ngIf="showField(caseFieldsNames.Description)" [field]="caseFieldsNames.Description" [form]="form"></case-textarea-control>
+                      <!--<case-textarea-control *ngIf="showField(caseFieldsNames.Description)" [field]="caseFieldsNames.Description" [form]="form"></case-textarea-control>-->
 
                       <case-summernote-control *ngIf="showField(caseFieldsNames.Description)" [field]="caseFieldsNames.Description" [form]="form"></case-summernote-control>
 
