--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/summernote/case-summernote-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/summernote/case-summernote-control.component.html
@@ -1,12 +1,12 @@
 <ng-container [formGroup]="form">
-  <div class="form-group">
-    <label class="control-label" [attr.for]="field">{{formControl.label}}{{ requiredSymbol }}</label>
-    <textarea #input [ngxSummernote] [formControlName]="field"
-      [ngClass]="{ 'disabled': formControl.disabled }">{{ formControl.label }}{{ requiredSymbol }}</textarea>
-    <div *ngIf="form.controls[field].invalid && form.controls[field].touched" class="invalid-feedback">
-      <div *ngIf="form.controls[field].errors">{{getErrorMessage()}}</div>
+  <hr class="summer-note-hr"/>
+  <div class="summer-note-outer">
+    <div class="form-group">
+      <label class="control-label" [attr.for]="field">{{formControl.label}}{{ requiredSymbol }}</label>
+      <textarea #input [ngxSummernote]="summerNoteConfig" [ngxSummernoteDisabled]="form.controls[field].isDisabled" [formControlName]="field" [ngClass]="{ 'disabled': formControl.disabled }">{{ formControl.label }}{{ requiredSymbol }}</textarea>
+      <div *ngIf="form.controls[field].invalid && form.controls[field].touched" class="invalid-feedback">
+        <div class="invalid-feedback-inner" *ngIf="form.controls[field].errors">{{getErrorMessage()}}</div>
+      </div>
     </div>
-
   </div>
-
 </ng-container>
