# 252204 - Task - Ärende - Inform administrator - setting to NOT send as standard

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Customer/_Customer.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Customer/_Customer.cshtml
@@ -230,6 +230,14 @@
             </td>
         </tr>
         <tr>
+            <td>
+                @Translation.Get("Informera HandläggareX som standard")?
+            </td>
+            <td>
+                @Html.DropDownListFor(model => model.Customer.CommunicateWithPerformer, Model.CWPSelect)
+            </td>
+        </tr>
+        <tr>
             <td class="span3">
                 @Translation.Get("Helpdesk e-post")
             </td>
