--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -184,6 +184,8 @@ Model.EnableTwoAttachments))
 
                                 @Html.HiddenFor(model => model.CaseLog.EmailRecepientsInternalLogTo, new { id = "caseLog_EmailRecepientsInternalLogTo", @readonly = "true" })
 
+                                @Html.HiddenFor(model => model.CaseLog.AutoCheckPerformerCheckbox, new { id = "autoCheckPerformerCheckbox", @readonly = "true" })
+
                                 <div class="checkbox commun" style="margin-bottom:5px;">
 
                                     @Html.CheckBoxFor(model => model.CaseLog.SendMailAboutCaseToPerformer,
@@ -740,53 +742,53 @@ Model.EnableTwoAttachments))
 {
     @Html.Partial("~/Views/Cases/_CaseValidation.cshtml", Model)
 
-    <div id="hiddenCaseFields" style="display: none !important">
-        @Html.HiddenFor(m => m.case_.ReportedBy)
-        @Html.HiddenFor(m => m.case_.PersonsName)
-        @Html.HiddenFor(m => m.case_.PersonsEmail)
-        @Html.HiddenFor(m => m.case_.PersonsPhone)
-        @Html.HiddenFor(m => m.case_.PersonsCellphone)
-        @Html.HiddenFor(m => m.case_.Region_Id)
-        @Html.HiddenFor(m => m.case_.Department_Id)
-        @Html.HiddenFor(m => m.case_.OU_Id)
-        @Html.HiddenFor(m => m.case_.CostCentre)
-        @Html.HiddenFor(m => m.case_.Place)
-        @Html.HiddenFor(m => m.case_.UserCode)
+<div id="hiddenCaseFields" style="display: none !important">
+    @Html.HiddenFor(m => m.case_.ReportedBy)
+    @Html.HiddenFor(m => m.case_.PersonsName)
+    @Html.HiddenFor(m => m.case_.PersonsEmail)
+    @Html.HiddenFor(m => m.case_.PersonsPhone)
+    @Html.HiddenFor(m => m.case_.PersonsCellphone)
+    @Html.HiddenFor(m => m.case_.Region_Id)
+    @Html.HiddenFor(m => m.case_.Department_Id)
+    @Html.HiddenFor(m => m.case_.OU_Id)
+    @Html.HiddenFor(m => m.case_.CostCentre)
+    @Html.HiddenFor(m => m.case_.Place)
+    @Html.HiddenFor(m => m.case_.UserCode)
 
-        @Html.HiddenFor(m => m.case_.InventoryNumber)
-        @Html.HiddenFor(m => m.case_.InventoryType)
-        @Html.HiddenFor(m => m.case_.InventoryLocation)
+    @Html.HiddenFor(m => m.case_.InventoryNumber)
+    @Html.HiddenFor(m => m.case_.InventoryType)
+    @Html.HiddenFor(m => m.case_.InventoryLocation)
 
-        @Html.HiddenFor(m => m.CustomerRegistrationSourceId)
-        @Html.HiddenFor(m => m.case_.ProductArea_Id)
-        @Html.HiddenFor(m => m.case_.System_Id)
-        @Html.HiddenFor(m => m.case_.Urgency_Id)
-        @Html.HiddenFor(m => m.case_.Impact_Id)
-        @Html.HiddenFor(m => m.case_.Category_Id)
-        @Html.HiddenFor(m => m.case_.Supplier_Id)
-        @Html.HiddenFor(m => m.case_.InvoiceNumber)
-        @Html.HiddenFor(m => m.case_.ReferenceNumber)
-        @Html.HiddenFor(m => m.case_.Caption)
-        @Html.HiddenFor(m => m.case_.Description)
-        @Html.HiddenFor(m => m.case_.Miscellaneous)
-        @Html.HiddenFor(m => m.case_.AgreedDate)
-        @Html.HiddenFor(m => m.case_.Available)
-        @Html.HiddenFor(m => m.case_.Cost)
-        @Html.HiddenFor(m => m.case_.OtherCost)
-        @Html.HiddenFor(m => m.case_.Currency)
+    @Html.HiddenFor(m => m.CustomerRegistrationSourceId)
+    @Html.HiddenFor(m => m.case_.ProductArea_Id)
+    @Html.HiddenFor(m => m.case_.System_Id)
+    @Html.HiddenFor(m => m.case_.Urgency_Id)
+    @Html.HiddenFor(m => m.case_.Impact_Id)
+    @Html.HiddenFor(m => m.case_.Category_Id)
+    @Html.HiddenFor(m => m.case_.Supplier_Id)
+    @Html.HiddenFor(m => m.case_.InvoiceNumber)
+    @Html.HiddenFor(m => m.case_.ReferenceNumber)
+    @Html.HiddenFor(m => m.case_.Caption)
+    @Html.HiddenFor(m => m.case_.Description)
+    @Html.HiddenFor(m => m.case_.Miscellaneous)
+    @Html.HiddenFor(m => m.case_.AgreedDate)
+    @Html.HiddenFor(m => m.case_.Available)
+    @Html.HiddenFor(m => m.case_.Cost)
+    @Html.HiddenFor(m => m.case_.OtherCost)
+    @Html.HiddenFor(m => m.case_.Currency)
 
-        @Html.HiddenFor(m => m.case_.WorkingGroup_Id)
-        @Html.HiddenFor(m => m.ResponsibleUser_Id)
-        @Html.HiddenFor(m => m.Performer_Id)
-        @Html.HiddenFor(m => m.case_.Priority_Id)
-        @Html.HiddenFor(m => m.case_.Status_Id)
-        @Html.HiddenFor(m => m.case_.StateSecondary_Id)
-        @Html.HiddenFor(m => m.case_.Project_Id)
-        @Html.HiddenFor(m => m.case_.Problem_Id)
-        @Html.HiddenFor(m => m.case_.CausingPartId)
-        @Html.HiddenFor(m => m.case_.PlanDate)
-        @Html.HiddenFor(m => m.case_.WatchDate)
-        @Html.HiddenFor(m => m.case_.VerifiedDescription)
-        @Html.HiddenFor(m => m.case_.SolutionRate)
-    </div>
+    @Html.HiddenFor(m => m.case_.WorkingGroup_Id)
+    @Html.HiddenFor(m => m.ResponsibleUser_Id)
+    @Html.HiddenFor(m => m.Performer_Id)
+    @Html.HiddenFor(m => m.case_.Priority_Id)
+    @Html.HiddenFor(m => m.case_.Status_Id)
+    @Html.HiddenFor(m => m.case_.StateSecondary_Id)
+    @Html.HiddenFor(m => m.case_.Project_Id)
+    @Html.HiddenFor(m => m.case_.Problem_Id)
+    @Html.HiddenFor(m => m.case_.CausingPartId)
+    @Html.HiddenFor(m => m.case_.PlanDate)
+    @Html.HiddenFor(m => m.case_.WatchDate)
+    @Html.HiddenFor(m => m.case_.VerifiedDescription)
+    @Html.HiddenFor(m => m.case_.SolutionRate)
+</div>
 }
